    forums.

    We now only link /etc/{resolv,ntp,yp}.conf when the file exists.
    We now link back everything in the state dir except for .sv files.

  30 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Fixed associate_order "forcepreferred" #100799, thanks to Benoit Boissinot.

  29 Jul 2005; Roy Marples <uberlord@gentoo.org>:

   Fixed dhclient sending hostname #100745, thanks to Benoit Boissinot.

* baselayout-1.12.0_pre3 (29 Jul 2005)

  26 Jul 2005; Martin Schlemmer <azarah@gentoo.org>:

    Remove the "parallel" depend stuff from the awk backend.

  26 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Removed the "parallel" depend for init scripts and related functions.
    The RC_PARALLEL_STARTUP works well for all - no need for init scripts to
    state if they parallel or not.

    Removed loops from trace_dependencies for a nice speed boost.

    Fixed failure in runscript.sh to proceed when a non needed dependency
    (ie use, after, before) failed to start.

  25 Jul 2005; Martin Schlemmer <azarah@gentoo.org>:

    If we do not have net services, check both boot and current runlevel for
    net services in trace_dependencies().  Sort services and make sure they
    are unique.

    Fix the adding of dependencies to properly add netservices as 'net'.

  25 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    trace_dependencies no longer clobbers the net service.

    RC_AUTO_INTERFACE no longer symlinks /etc/{resolv,ntp,yp}.conf when no.

  25 Jul 2005; Martin Schlemmer <azarah@gentoo.org>:

    Do not restart dependencies on runlevel change if the service that needs
    them are in the next runlevel.

* baselayout-1.12.0_pre2 (22 Jul 2005)

  22 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    When a service is stopped, the IN_BACKGROUND variable is cleared
    before any dependencies are stopped so they are not marked inactive.
    The IN_BACKGROUND variable is then restored so the parent script can be
    marked inactive.
